# AI-Data-Engineering-Copilot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
.streamlit/: config.toml
deploy/docker/: entrypoint.sh
deploy/k8s/: README.md  api-deployment.yaml  config.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  ollama.yaml  postgres.yaml  ui-deployment.yaml
deploy/terraform/: README.md  main.tf  variables.tf
docs/: API.md  ARCHITECTURE.md  DATA_FLOW.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  TESTING.md
docs/adr/: 0000-template.md  0001-clean-architecture.md  0002-local-llm-runtime.md  0003-langgraph-orchestration.md  0004-chromadb-vector-store.md  0005-model-agnostic-llm-provider.md  0006-deployment-compose-cloud-ready.md  0007-persistence-sqlalchemy-repository.md  README.md
docs/diagrams/: agent-flow.mmd  container.mmd  deployment.mmd  rag-sequence.mmd  system-context.mmd
migrations/: env.py
migrations/versions/: 20260714_0001_initial_schema.py
requirements/: base.txt  ci.txt  dev.txt
src/copilot/: __init__.py
src/copilot/agents/airflow/: agent.py
src/copilot/agents/base/: agent.py  types.py
src/copilot/agents/data_quality/: agent.py
src/copilot/agents/dbt/: agent.py
src/copilot/agents/documentation/: agent.py
src/copilot/agents/etl/: agent.py
src/copilot/agents/orchestrator/: orchestrator.py  registry.py
src/copilot/agents/pyspark/: agent.py
src/copilot/agents/rag/: agent.py
src/copilot/agents/sql/: agent.py
src/copilot/application/dto/: chat.py  conversation.py  rag.py
src/copilot/application/services/: prompts.py
src/copilot/application/use_cases/: chat.py  converse.py  ingest_document.py  run_agent.py  search_documents.py
src/copilot/config/: __init__.py  container.py  logging.py  settings.py
src/copilot/domain/: exceptions.py
src/copilot/domain/entities/: conversation.py
src/copilot/domain/ports/: embedding.py  llm.py  repositories.py  retriever.py  vector_store.py
tests/: conftest.py
tests/e2e/: test_api_flow.py
tests/fixtures/: __init__.py  failing.py  fakes.py  rag.py  repositories.py  retrievers.py
tests/integration/: test_orchestrator.py
tests/unit/: test_agents.py  test_agents_endpoint.py  test_chat_endpoint.py  test_chat_use_case.py  test_chunker.py  test_conversation_repository.py  test_conversations_endpoint.py  test_converse_use_case.py  test_error_mapping.py  test_health.py  test_ingest_use_case.py  test_ollama_provider.py  test_rag_endpoint.py  test_settings.py  test_vector_retriever.py
(+32 files in other folders)
